--- a/v2/api-references/overview/changelog.mdx
+++ b/v2/api-references/overview/changelog.mdx
@@ -2,7 +2,14 @@
 title: "Changelog"
 ---
 
+#### **July 17, 2024**
 
-#### July 10, 2024
-This is the first release of the WaaS 2.0 API.
+This is the first release of the Cobo WaaS 2.0 API.
+
+This release includes support for [Custodial Wallets](https://manuals.cobo.com/en/portal/custodial-wallets/introduction) and [MPC Wallets, with ](https://manuals.cobo.com/en/portal/mpc-wallets/introduction)the following categories of operations:
+
+- [General wallet operations](/developers/v2/api-references/wallets/list-supported-chains)
+- [MPC Wallets-specific operations](developers/v2/api-references/wallets--mpc-wallets/list-all-cobo-key-share-holders)
+- [Transactions operations](/developers/v2/api-references/transactions/get-fee-rates)
+- [Webhook operations](h/developers/v2/api-references/developers--webhooks/list-webhook-endpoints)
 
