--- a/v2/developer-tools/quickstart-python.mdx
+++ b/v2/developer-tools/quickstart-python.mdx
@@ -6,10 +6,11 @@ title: "Get started with Python SDK"
 
 This guide introduces how to get started with using the Cobo WaaS 2.0 Python SDK, which allows you to integrate the WaaS service into your existing application using the Python programming language.
 
-## Before you begin
+## Prerequisites
 
 - You have installed Python 3.7 or newer.
-- Follow the instructions in [Get started with WaaS 2.0](https://docs.google.com/document/d/1IRWINESCRODJj9Tp6nub0Oryj2pgxOFZZyjEl4S4s0g/edit#heading=h.mwfqcwnzcexq) to set up your Cobo account, generate an API key, and register your API key on Cobo Portal.
+- You have [set up Cobo Accounts](https://manuals.cobo.com/en/accounts/sign-up).
+- You have [generated an API key](/developers/v2/api-references/overview/cobo-auth#generate-an-api-key), and [register the API key](https://manuals.cobo.com/en/portal/developer-console/create-api-key) on Cobo Portal.
 
 ## Install the SDK
 
@@ -40,11 +41,9 @@ You can refer to the [configuration.py file](https://github.com/CoboGlobal/cobo-
 configuration = cobo_waas2.Configuration(
 
   # Replece `<YOUR_PRIVATE_KEY>` with your private key.
-
   api_private_key="<YOUR_PRIVATE_KEY>",
 
   # If you do not configure the host, the default host `https://api.cobo.com/v2` will be used.
-
   host="https://api.cobo.com/v2"
 
 )
@@ -52,7 +51,7 @@ configuration = cobo_waas2.Configuration(
 
 ## Code sample
 
-For operation-specific documentation and sample code, see [the docs folder](https://github.com/CoboGlobal/cobo-waas2-python-api/tree/master/docs) in the GitHub repository. 
+For operation-specific documentation and sample code, see the [docs](https://github.com/CoboGlobal/cobo-waas2-python-api/tree/master/docs) folder in the WaaS SDK GitHub repository. 
 
 ### Create a wallet
 
