--- a/v2/developer-tools/quickstart-python.mdx
+++ b/v2/developer-tools/quickstart-python.mdx
@@ -9,7 +9,7 @@ This guide introduces how to get started with using the Cobo WaaS 2.0 Python SDK
 ## Prerequisites
 
 - You have installed Python 3.7 or newer.
-- You have [set up Cobo Accounts](https://manuals.cobo.com/en/accounts/sign-up).
+- Follow the instructions in [Quick start guide](https://manuals.cobo.com/en/portal/quick-start-guide) to set up your Cobo account and create your organization. If an organization has already been set up, ask your organization admin to invite you to join the organization.
 - You have [generated an API key](/developers/v2/guides/overview/cobo-auth#generate-an-api-key), and [register the API key](https://manuals.cobo.com/en/portal/developer-console/create-api-key) on Cobo Portal.
 
 ## Install the SDK
@@ -52,6 +52,49 @@ configuration = cobo_waas2.Configuration(
 ## Code sample
 
 For operation-specific documentation and sample code, see the [docs](https://github.com/CoboGlobal/cobo-waas2-python-api/tree/master/docs) folder in the WaaS SDK GitHub repository. 
+
+### List supported chains
+
+
+```python
+import cobo_waas2
+
+from pprint import pprint
+
+configuration = cobo_waas2.Configuration(
+
+  # Replece `<YOUR_PRIVATE_KEY>` with your private key.
+
+  api_private_key="<YOUR_PRIVATE_KEY>",
+
+  # If you do not configure the host, the default host `https://api.cobo.com/v2` will be used.
+
+  host="https://api.cobo.com/v2"
+
+)
+
+# Enter a context with an instance of the API client
+
+with cobo_waas2.ApiClient(configuration) as api_client:
+
+  # Create an instance of the API class
+
+  api_instance = cobo_waas2.WalletsApi(api_client)
+
+  try:
+
+​    # List all supported chains
+
+​    api_response = api_instance.get_chains()
+
+​    print("The response of WalletsApi->get_chains:\n")
+
+​    pprint(api_response)
+
+  except Exception as e:
+
+​    print("Exception when calling WalletsApi->get_chains: %s\n" % e)
+```
 
 ### Create a wallet
 
@@ -115,46 +158,4 @@ configuration = cobo_waas2.Configuration(
         except Exception as e:
 
         ​    print("Exception when calling WalletsApi->create_wallet: %s\n" % e)
-```
-
-### List supported chains
-
-```python
-import cobo_waas2
-
-from pprint import pprint
-
-configuration = cobo_waas2.Configuration(
-
-  # Replece `<YOUR_PRIVATE_KEY>` with your private key.
-
-  api_private_key="<YOUR_PRIVATE_KEY>",
-
-  # If you do not configure the host, the default host `https://api.cobo.com/v2` will be used.
-
-  host="https://api.cobo.com/v2"
-
-)
-
-# Enter a context with an instance of the API client
-
-with cobo_waas2.ApiClient(configuration) as api_client:
-
-  # Create an instance of the API class
-
-  api_instance = cobo_waas2.WalletsApi(api_client)
-
-  try:
-
-​    # List all supported chains
-
-​    api_response = api_instance.get_chains()
-
-​    print("The response of WalletsApi->get_chains:\n")
-
-​    pprint(api_response)
-
-  except Exception as e:
-
-​    print("Exception when calling WalletsApi->get_chains: %s\n" % e)
 ```
