--- a/v2/guides/overview/cobo-auth.mdx
+++ b/v2/guides/overview/cobo-auth.mdx
@@ -22,6 +22,11 @@ headers = {
 }
 ```
 
+- Biz-Api-Key: The public key you generate in [Generate an API key](#generate-an-api-key).
+- Biz-Api-Nonce: A nonce is the current time in Unix timestamp format, measured in milliseconds. 
+- Biz-Api-Signature: The API signature. To learn how to calculate an API signature, see [Calculate an API Signature](#calculate-the-api-signaturez).
+
+
 ## API key
 
 The API key is used to identify the client making the API request. It is associated with a certain level of access to the API’s resources. Different API keys can be assigned with different permissions, allowing you to control what actions the client can perform.
@@ -53,14 +58,12 @@ The private key is saved in the `private.key.pem` file, and the public key is sa
 
 #### Use the Python library
 
-1. Install the ed25519 Python library
-   In a terminal window, run the following command:
+1. Install the ed25519 Python library. In a terminal window, run the following command:
 
     ```shell
     pip install ed25519
     ```
-2. Generate a key pair
-   Import the function from the Python library to generate a key pair as follows:
+2. Generate a key pair. Import the function from the Python library to generate a key pair as follows:
 
     ```python
     from ed25519.keys import create_keypair
